tests/compile-fail/update_while_borrowed.ails
module demo.update_while_borrowed

func inspect
    input x: view i32
    output bool
    effect pure
begin
    return x == x
end

func bad
    input y: own i32
    output own i32
    effect pure
begin
    let z: bool = inspect(y)
    set y = 3
    if z then
    begin
        return y
    end
    else
    begin
        return y
    end
end
